<resources>
    <string name="app_name">媛厨</string>
    <string name="search">search</string>
    <string name="share_app">分享媛厨</string>
    <string name="share_from_app">---分享自媛厨---</string>
    <string name="share">share</string>
    <string name="share_content">媛厨App --- 一生只为最爱的人做饭</string>
    <string name="email_name">15201927275@163.com</string>
    <string name="name">Chen Ti</string>
    <string name="hot">热门</string>
    <string name="custom">定制</string>
    <string name="favourite">喜好</string>
    <string name="web">网络</string>
    <string name="language">语言</string>
    <string name="text_language">简体中文</string>
    <string name="exit_confirm">退出确认</string>
    <string name="text_exit_confirm">按两次返回键退出应用</string>
    <string name="no_picture">无图模式</string>
    <string name="text_no_picture">仅在WIFI下加载图片</string>
    <string name="text_clear_chche">清除应用缓存</string>
    <string name="healthy">健康</string>
    <string name="collections">收藏</string>
    <string name="collected_succ">收藏成功</string>
    <string name="collected_fail">加载未完成，收藏失败</string>
    <string name="remove_from_collections_succ">已从收藏列表移除</string>
    <string name="night_model">夜间模式</string>
    <string name="setting">设置</string>
    <string name="clear_cache">清除缓存</string>
    <string name="about">关于</string>
    <string name="visit">访问</string>
    <string name="not_read">未读</string>
    <string name="readed">已读</string>
    <string name="text_app_intro">应用简介</string>
    <string name="current_version">当前版本</string>
    <string name="cook2y_vewsion">Cook2Y Version 1.0</string>
    <string name="check_update">检查更新</string>
    <string name="author">作者</string>
    <string name="blog">博客</string>
    <string name="blog_address">http://blog.csdn.net/t465882689</string>
    <string name="email">邮箱</string>
    <string name="copyright">版权</string>
    <string name="data">数据</string>
    <string name="data_desc">所有数据均来自公开的API，版权属于原作者</string>
    <string name="attention">注意</string>
    <string name="attention_desc">严禁将此应用用于商业目的及其他谋利活动</string>
    <string name="notify_exit_confirm">再按一次退出</string>
    <string name="food_id">food_id</string>
    <string name="ClassID">ClassID</string>
    <string name="food_info">food_info</string>
    <string name="search_food_info">search_food_info</string>
    <string name="collection_item">collection_item</string>
    <string name="food_from_collectionList">food_from_collectionList</string>
    <string name="search_food_name">菜谱名称</string>
    <string name="search_food">搜索菜谱</string>
    <string name="search_text_null">菜谱名称为空</string>
    <string name="search_results">搜索结果</string>
    <string name="search_fail">搜索失败</string>
    <string name="search_null">搜索为空</string>
    <string name="load">上拉加载更多</string>
    <string name="loading">正在加载</string>
</resources>
