<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/favourite">
        <Preference
            android:key="language"
            android:title="@string/language"
            android:summary="@string/text_language"/>
        <CheckBoxPreference
            android:key="exit_confirm"
            android:title="@string/exit_confirm"
            android:summary="@string/text_exit_confirm"
            android:checked="true"/>
        <CheckBoxPreference
            android:key="night_mode"
            android:title="@string/night_model"
            android:checked="false">
        </CheckBoxPreference>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/web">
        <CheckBoxPreference
            android:key="no_picture"
            android:title="@string/no_picture"
            android:summary="@string/text_no_picture"
            android:checked="false">
        </CheckBoxPreference>
        <Preference
            android:key="clear_cache"
            android:title="@string/clear_cache"
            android:summary="@string/text_clear_chche">
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>